# ai-debate-tool

./: CHANGELOG.md  README.md  pyproject.toml  tmpclaude-4087-cwd
.speckit/specs/: v1.3.0_streaming_multimodel_spec.md
docs/: mcp-server.md
examples/: mcp-config.json
src/ai_debate_tool/: __init__.py  cli.py
src/ai_debate_tool/mcp_server/: __init__.py  __main__.py  codex_mcp_bridge.py  debate_server.py  fastmcp_server.py  mcp_config.json
src/ai_debate_tool/services/: model_provider.py  stream_events.py  streaming_orchestrator.py
tests/unit/: test_debate_cache.py  test_fast_moderator.py  test_priority_scorer.py  test_prompt_optimizer.py
