[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-debate-tool"
version = "2.0.0"
description = "AI-to-AI debate orchestration for better decision-making"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AI Debate Tool Contributors"}
]
keywords = [
    "ai",
    "debate",
    "consensus",
    "decision-making",
    "code-review",
    "claude",
    "codex"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "filelock>=3.12.0",
    "click>=8.0.0",
    "fastmcp>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
ai-debate = "ai_debate_tool.cli:main"
ai-debate-server = "ai_debate_tool.mcp_server:main"

[project.urls]
Homepage = "https://github.com/ai-debate-tool/ai-debate-tool"
Documentation = "https://github.com/ai-debate-tool/ai-debate-tool#readme"
Repository = "https://github.com/ai-debate-tool/ai-debate-tool"
Changelog = "https://github.com/ai-debate-tool/ai-debate-tool/blob/main/CHANGELOG.md"
Issues = "https://github.com/ai-debate-tool/ai-debate-tool/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_debate_tool"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["src/ai_debate_tool"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
